# smart-forecasting

./: pyproject.toml  start_celery.sh
frontend/: main.py
frontend/components/: badge.py  card.py  chart.py  filter.py  navbar.py  pagination.py  table.py
frontend/routes/: datapoints.py  datasources.py  home.py
frontend/utils/: constants.py  helpers.py  ui_constants.py
smartforecasting/: app_builder.py  async_tasks.py  celery_config.py  config.py  constants.py  database.py  logging_config.py  redis_memory.py  run.py  utility.py
smartforecasting/forecasting/: auto_regression.py  exponential_smoothing.py  models.py  utility.py
smartforecasting/routes/: datapoints.py  datasources.py  forecasting.py  status.py
smartforecasting/structs/: enums.py  models.py  utility.py
tests/: test_app.py
